--- a/src/KK_SliderUnlocker/packages.config
+++ b/src/KK_SliderUnlocker/packages.config
@@ -4,7 +4,7 @@
   <package id="IllusionLibs.BepInEx.Harmony" version="2.0.0-beta" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionLibs.Koikatu.Assembly-CSharp" version="2019.4.27" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionLibs.Koikatu.Assembly-CSharp-firstpass" version="2019.4.27" targetFramework="net35" developmentDependency="true" />
+  <package id="IllusionLibs.Koikatu.TextMeshPro" version="2019.4.27" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionLibs.Koikatu.UnityEngine" version="5.6.2" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionLibs.Koikatu.UnityEngine.UI" version="5.6.2" targetFramework="net35" developmentDependency="true" />
-  <package id="IllusionLibs.XUnity.ResourceRedirector" version="4.6.4.1" targetFramework="net35" developmentDependency="true" />
 </packages>
