--- a/src/EC_ExtensibleSaveFormat/EC_ExtensibleSaveFormat.csproj
+++ b/src/EC_ExtensibleSaveFormat/EC_ExtensibleSaveFormat.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="EC_ExtensibleSaveFormat.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="..\Core_ExtensibleSaveFormat\Core_ExtensibleSaveFormat.projitems" Label="Shared" />
