--- a/src/KK_Sideloader/KK_Sideloader.csproj
+++ b/src/KK_Sideloader/KK_Sideloader.csproj
@@ -98,6 +98,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="KK_Sideloader.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="..\Shared\Shared.projitems" Label="Shared" />
