--- a/src/AI_ExtensibleSaveFormat/AI_ExtensibleSaveFormat.csproj
+++ b/src/AI_ExtensibleSaveFormat/AI_ExtensibleSaveFormat.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="AI_ExtensibleSaveFormat.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="..\Core_ExtensibleSaveFormat\Core_ExtensibleSaveFormat.projitems" Label="Shared" />
