--- a/src/EC_Sideloader/EC_Sideloader.csproj
+++ b/src/EC_Sideloader/EC_Sideloader.csproj
@@ -120,6 +120,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="EC_Sideloader.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="..\Core_Sideloader\Core_Sideloader.projitems" Label="Shared" />
