--- a/src/KK_ExtensibleSaveFormat/KK_ExtensibleSaveFormat.csproj
+++ b/src/KK_ExtensibleSaveFormat/KK_ExtensibleSaveFormat.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="KK_ExtensibleSaveFormat.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="..\Shared\Shared.projitems" Label="Shared" />
