--- a/src/AI_Sideloader/AI_Sideloader.nuspec
+++ b/src/AI_Sideloader/AI_Sideloader.nuspec
@@ -9,4 +9,7 @@
     <description>Loads mods packaged in .zip archives from the Mods directory without modifying the game files at all</description>
     <developmentDependency>true</developmentDependency>
   </metadata>
+  <files>
+    <file src="..\install.ps1" target="tools"/>
+  </files>
 </package>
