--- a/src/AI_Sideloader/packages.config
+++ b/src/AI_Sideloader/packages.config
@@ -9,5 +9,6 @@
   <package id="IllusionLibs.AIGirl.UnityEngine.UnityWebRequestWWWModule" version="2018.2.21" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx" version="5.0.0" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.BepInEx.Harmony" version="2.0.0-beta" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.XUnity.ResourceRedirector" version="4.6.4.1" targetFramework="net46" developmentDependency="true" />
+  <package id="XUnity.Common" version="1.0.0" targetFramework="net46" developmentDependency="true" />
+  <package id="XUnity.ResourceRedirector" version="1.1.0" targetFramework="net46" developmentDependency="true" />
 </packages>
