--- a/src/EC_BGMLoader/packages.config
+++ b/src/EC_BGMLoader/packages.config
@@ -6,5 +6,6 @@
   <package id="IllusionLibs.EmotionCreators.UnityEngine.AudioModule" version="2017.4.24" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.EmotionCreators.UnityEngine.CoreModule" version="2017.4.24" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.EmotionCreators.UnityEngine.UnityWebRequestWWWModule" version="2017.4.24" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.XUnity.ResourceRedirector" version="4.6.4.1" targetFramework="net46" developmentDependency="true" />
+  <package id="XUnity.Common" version="1.0.0" targetFramework="net46" developmentDependency="true" />
+  <package id="XUnity.ResourceRedirector" version="1.1.0" targetFramework="net46" developmentDependency="true" />
 </packages>
