--- a/src/KK_Sideloader/packages.config
+++ b/src/KK_Sideloader/packages.config
@@ -6,5 +6,6 @@
   <package id="IllusionLibs.Koikatu.Assembly-CSharp-firstpass" version="2019.4.27" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionLibs.Koikatu.UnityEngine" version="5.6.2" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionLibs.Koikatu.UnityEngine.UI" version="5.6.2" targetFramework="net35" developmentDependency="true" />
-  <package id="IllusionLibs.XUnity.ResourceRedirector" version="4.6.4.1" targetFramework="net35" developmentDependency="true" />
+  <package id="XUnity.Common" version="1.0.0" targetFramework="net35" developmentDependency="true" />
+  <package id="XUnity.ResourceRedirector" version="1.1.0" targetFramework="net35" developmentDependency="true" />
 </packages>
