Fixed ph default slider marker not moving

--- a/src/PH_SliderUnlocker/PH_SliderUnlocker.csproj
+++ b/src/PH_SliderUnlocker/PH_SliderUnlocker.csproj
@@ -63,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PH.SliderUnlocker.Hooks.cs" />
     <Compile Include="PH.SliderUnlocker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
