Turn on xml docs for screencap

--- a/src/HS2_Screencap/HS2_Screencap.csproj
+++ b/src/HS2_Screencap/HS2_Screencap.csproj
@@ -30,6 +30,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DebugSymbols>true</DebugSymbols>
+    <DocumentationFile>..\..\bin\BepInEx\plugins\HS2_BepisPlugins\HS2_Screencap.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
