--- a/src/AI_Screencap/AI_Screencap.csproj
+++ b/src/AI_Screencap/AI_Screencap.csproj
@@ -31,8 +31,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DebugSymbols>true</DebugSymbols>
-    <DocumentationFile>
-    </DocumentationFile>
+    <DocumentationFile>..\..\bin\BepInEx\plugins\AI_BepisPlugins\AI_Screencap.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
