--- a/src/AI_ExtensibleSaveFormat/AI_ExtensibleSaveFormat.csproj
+++ b/src/AI_ExtensibleSaveFormat/AI_ExtensibleSaveFormat.csproj
@@ -95,6 +95,6 @@
   <Import Project="..\Core_ExtensibleSaveFormat_Studio\Core_ExtensibleSaveFormat_Studio.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>IF EXIST $(SolutionDir)PostBuild.bat CALL "$(SolutionDir)PostBuild.bat" $(TargetPath) AI</PostBuildEvent>
+    <PostBuildEvent>IF EXIST "$(SolutionDir)PostBuild.bat" CALL "$(SolutionDir)PostBuild.bat" "$(TargetPath)" AI</PostBuildEvent>
   </PropertyGroup>
 </Project>
