--- a/src/EC_ColorCorrector/EC_ColorCorrector.csproj
+++ b/src/EC_ColorCorrector/EC_ColorCorrector.csproj
@@ -71,6 +71,6 @@
   <Import Project="..\Core_ColorCorrector\Core_ColorCorrector.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>IF EXIST $(SolutionDir)PostBuild.bat CALL "$(SolutionDir)PostBuild.bat" $(TargetPath) EC</PostBuildEvent>
+    <PostBuildEvent>IF EXIST "$(SolutionDir)PostBuild.bat" CALL "$(SolutionDir)PostBuild.bat" "$(TargetPath)" EC</PostBuildEvent>
   </PropertyGroup>
 </Project>
