--- a/src/HS_SliderUnlocker/HS_SliderUnlocker.csproj
+++ b/src/HS_SliderUnlocker/HS_SliderUnlocker.csproj
@@ -74,6 +74,6 @@
   <Import Project="..\Shared\Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>IF EXIST $(SolutionDir)PostBuild.bat CALL "$(SolutionDir)PostBuild.bat" $(TargetPath) HS</PostBuildEvent>
+    <PostBuildEvent>IF EXIST "$(SolutionDir)PostBuild.bat" CALL "$(SolutionDir)PostBuild.bat" "$(TargetPath)" HS</PostBuildEvent>
   </PropertyGroup>
 </Project>
