--- a/src/KK_Screencap/KK_Screencap.csproj
+++ b/src/KK_Screencap/KK_Screencap.csproj
@@ -83,6 +83,6 @@
   <Import Project="..\Core_Screencap\Core_Screencap.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>IF EXIST $(SolutionDir)PostBuild.bat CALL "$(SolutionDir)PostBuild.bat" $(TargetPath) KK</PostBuildEvent>
+    <PostBuildEvent>IF EXIST "$(SolutionDir)PostBuild.bat" CALL "$(SolutionDir)PostBuild.bat" "$(TargetPath)" KK</PostBuildEvent>
   </PropertyGroup>
 </Project>
