--- a/src/AI_ExtensibleSaveFormat/packages.config
+++ b/src/AI_ExtensibleSaveFormat/packages.config
@@ -1,11 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BepInEx.BaseLib" version="5.4.0" targetFramework="net46" />
+  <package id="BepInEx.Core" version="5.4.0" targetFramework="net46" />
+  <package id="HarmonyX" version="2.1.1" targetFramework="net46" />
   <package id="IllusionLibs.AIGirl.Assembly-CSharp" version="2020.5.29" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.MessagePack" version="2020.5.29" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.Sirenix.Serialization" version="2020.5.29" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.CoreModule" version="2018.2.21.1" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.IMGUIModule" version="2018.2.21.1" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.UI" version="2018.2.21.1" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.BepInEx" version="5.3.0" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.BepInEx.Harmony" version="2.0.6" targetFramework="net46" developmentDependency="true" />
+  <package id="Mono.Cecil" version="0.11.3" targetFramework="net46" />
+  <package id="MonoMod.RuntimeDetour" version="20.11.5.1" targetFramework="net46" />
+  <package id="MonoMod.Utils" version="20.11.5.1" targetFramework="net46" />
 </packages>
