--- a/src/HS2_ConfigurationManager/packages.config
+++ b/src/HS2_ConfigurationManager/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BepInEx.BaseLib" version="5.4.0" targetFramework="net46" />
   <package id="BepInEx.ConfigurationManager" version="16.1.0" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.BepInEx" version="5.3.0" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.BepInEx.Harmony" version="2.0.6" targetFramework="net46" developmentDependency="true" />
+  <package id="BepInEx.Core" version="5.4.0" targetFramework="net46" />
+  <package id="HarmonyX" version="2.1.1" targetFramework="net46" />
   <package id="IllusionLibs.HoneySelect2.Assembly-CSharp" version="2020.5.29" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.IL" version="2020.5.29" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.Sirenix.Serialization" version="2020.5.29" targetFramework="net46" developmentDependency="true" />
@@ -11,4 +12,7 @@
   <package id="IllusionLibs.HoneySelect2.UnityEngine.CoreModule" version="2018.4.11" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.UnityEngine.IMGUIModule" version="2018.4.11" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.UnityEngine.UI" version="2018.4.11" targetFramework="net46" developmentDependency="true" />
+  <package id="Mono.Cecil" version="0.11.3" targetFramework="net46" />
+  <package id="MonoMod.RuntimeDetour" version="20.11.5.1" targetFramework="net46" />
+  <package id="MonoMod.Utils" version="20.11.5.1" targetFramework="net46" />
 </packages>
