--- a/src/AI_ConfigurationManager/packages.config
+++ b/src/AI_ConfigurationManager/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BepInEx.Analyzers" version="1.0.3" targetFramework="net46" />
   <package id="BepInEx.BaseLib" version="5.4.0" targetFramework="net46" />
   <package id="BepInEx.ConfigurationManager" version="16.1.0" targetFramework="net46" developmentDependency="true" />
   <package id="BepInEx.Core" version="5.4.0" targetFramework="net46" />
@@ -9,6 +10,7 @@
   <package id="IllusionLibs.AIGirl.UnityEngine.CoreModule" version="2018.2.21.1" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.IMGUIModule" version="2018.2.21.1" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.UnityEngine.UI" version="2018.2.21.1" targetFramework="net46" developmentDependency="true" />
+  <package id="Microsoft.Unity.Analyzers" version="1.8.2" targetFramework="net46" developmentDependency="true" />
   <package id="Mono.Cecil" version="0.11.3" targetFramework="net46" />
   <package id="MonoMod.RuntimeDetour" version="20.11.5.1" targetFramework="net46" />
   <package id="MonoMod.Utils" version="20.11.5.1" targetFramework="net46" />
