--- a/src/EC_Sideloader/packages.config
+++ b/src/EC_Sideloader/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BepInEx.Analyzers" version="1.0.3" targetFramework="net46" />
   <package id="BepInEx.BaseLib" version="5.4.0" targetFramework="net46" />
   <package id="BepInEx.Core" version="5.4.0" targetFramework="net46" />
   <package id="HarmonyX" version="2.1.1" targetFramework="net46" />
@@ -12,6 +13,7 @@
   <package id="IllusionLibs.EmotionCreators.UnityEngine.IMGUIModule" version="2017.4.24.1" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.EmotionCreators.UnityEngine.TextRenderingModule" version="2017.4.24.1" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.EmotionCreators.UnityEngine.UnityWebRequestWWWModule" version="2017.4.24.1" targetFramework="net46" developmentDependency="true" />
+  <package id="Microsoft.Unity.Analyzers" version="1.8.2" targetFramework="net46" developmentDependency="true" />
   <package id="Mono.Cecil" version="0.11.3" targetFramework="net46" />
   <package id="MonoMod.RuntimeDetour" version="20.11.5.1" targetFramework="net46" />
   <package id="MonoMod.Utils" version="20.11.5.1" targetFramework="net46" />
