--- a/src/HS_ConfigurationManager/packages.config
+++ b/src/HS_ConfigurationManager/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BepInEx.Analyzers" version="1.0.3" targetFramework="net35" />
   <package id="BepInEx.BaseLib" version="5.4.0" targetFramework="net35" />
   <package id="BepInEx.ConfigurationManager" version="16.1.0" targetFramework="net35" developmentDependency="true" />
   <package id="BepInEx.Core" version="5.4.0" targetFramework="net35" />
@@ -7,6 +8,7 @@
   <package id="IllusionLibs.HoneySelect.Assembly-CSharp" version="2017.6.30" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect.UnityEngine" version="5.3.5" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect.UnityEngine.UI" version="5.3.5" targetFramework="net35" developmentDependency="true" />
+  <package id="Microsoft.Unity.Analyzers" version="1.8.2" targetFramework="net35" developmentDependency="true" />
   <package id="Mono.Cecil" version="0.10.4" targetFramework="net35" />
   <package id="MonoMod.RuntimeDetour" version="20.11.5.1" targetFramework="net35" />
   <package id="MonoMod.Utils" version="20.11.5.1" targetFramework="net35" />
