--- a/src/KK_ExtensibleSaveFormat/KK_ExtensibleSaveFormat.csproj
+++ b/src/KK_ExtensibleSaveFormat/KK_ExtensibleSaveFormat.csproj
@@ -91,6 +91,11 @@
     <None Include="KK_ExtensibleSaveFormat.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\..\packages\BepInEx.Analyzers.1.0.3\analyzers\dotnet\cs\BepInEx.Analyzers.CodeFixes.dll" />
+    <Analyzer Include="..\..\packages\BepInEx.Analyzers.1.0.3\analyzers\dotnet\cs\BepInEx.Analyzers.dll" />
+    <Analyzer Include="..\..\packages\Microsoft.Unity.Analyzers.1.8.2\analyzers\dotnet\cs\Microsoft.Unity.Analyzers.dll" />
+  </ItemGroup>
   <Import Project="..\Shared\Shared.projitems" Label="Shared" />
   <Import Project="..\Core_ExtensibleSaveFormat\Core_ExtensibleSaveFormat.projitems" Label="Shared" />
   <Import Project="..\Core_ExtensibleSaveFormat_Studio\Core_ExtensibleSaveFormat_Studio.projitems" Label="Shared" />
