--- a/src/KK_Sideloader/packages.config
+++ b/src/KK_Sideloader/packages.config
@@ -12,6 +12,7 @@
   <package id="Mono.Cecil" version="0.10.4" targetFramework="net35" />
   <package id="MonoMod.RuntimeDetour" version="20.11.5.1" targetFramework="net35" />
   <package id="MonoMod.Utils" version="20.11.5.1" targetFramework="net35" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net35" />
   <package id="XUnity.Common" version="1.0.0" targetFramework="net35" developmentDependency="true" />
   <package id="XUnity.ResourceRedirector" version="1.1.0" targetFramework="net35" developmentDependency="true" />
 </packages>
